<resources>
    <string name="app_name">Workshop Kotlin</string>
    <string name="button_string">Ini button</string>
    <string name="custom">Custom</string>
    <string name="title">Personal Money\nManager</string>
    <string name="version">Version 1.0</string>
    <string name="title_onboarding_1">Manage Your Budgeting</string>
    <string name="subtitle_onboarding_1">Easy manage your income and expense into category.</string>
    <string name="title_onboarding_2">Track Your Expense</string>
    <string name="subtitle_onboarding_2">Easy tracking and find your most spending at.</string>
    <string name="title_onboarding_3">Set Your Goal</string>
    <string name="subtitle_onboarding_3">You can set goals for your income and expense.</string>
    <string name="skip">Skip</string>
    <string name="title_register">Track your finance now!</string>
    <string name="login">Login</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="register_with_google">Register with google</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="create_your_account">Create your account?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_with_google">Login with google</string>
    <string name="home">Home</string>
    <string name="transaction">Transaction</string>
    <string name="report">Report</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">Hai, Wildan</string>
    <string name="home_subtitle">Control your expense, control your life</string>
    <string name="monthly_overview">Monthly Overview</string>
    <string name="your_budget_control">Your Budget Control</string>
    <string name="weakly_transaction">Weakly Transaction</string>
    <string name="all">All</string>
    <string name="choose_category">Choose Category</string>
    <string name="create">Create</string>
    <string name="category">Category</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="rp0">Rp0</string>
    <string name="set_amount">Set Amount</string>
    <string name="type_name">Type name...</string>
    <string name="type">Type</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="optional">(optional)</string>
    <string name="create_category">Create Category</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="spending_of_the_month">Spending Of the Month</string>
</resources>