<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".auth.RegisterActivity">

    <View
        android:id="@+id/viewBg"
        android:layout_width="match_parent"
        android:layout_height="472dp"
        android:background="@drawable/bg_top_rounded"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/title_register"
        android:textColor="@color/textHeading"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewBg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name"
        app:boxStrokeColor="@color/box_custom_textfield"
        app:layout_constraintTop_toBottomOf="@id/labelTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/box_custom_textfield"
        app:layout_constraintTop_toBottomOf="@id/nameTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        app:boxStrokeColor="@color/box_custom_textfield"
        app:layout_constraintTop_toBottomOf="@id/emailTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/raleway_bold"
        android:letterSpacing="0"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/passwordTextField" />

    <ProgressBar
        android:id="@+id/registerProgress"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/buttonRegister"
        app:layout_constraintBottom_toBottomOf="@id/buttonRegister"
        app:layout_constraintStart_toStartOf="@id/buttonRegister"
        app:layout_constraintEnd_toEndOf="@id/buttonRegister"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegisterWithGoogle"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/raleway_bold"
        android:letterSpacing="0"
        android:text="@string/register_with_google"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        app:strokeColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/labelHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/questrial"
        android:text="@string/have_an_account"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:letterSpacing="0"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/labelHaveAnAccount"
        app:layout_constraintStart_toEndOf="@id/labelHaveAnAccount"
        app:layout_constraintTop_toTopOf="@id/labelHaveAnAccount"/>


</androidx.constraintlayout.widget.ConstraintLayout>