<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softBlue"
    tools:context=".main.ui.home.HomeFragment">

    <TextView
        android:id="@+id/textGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/greeting"
        android:textColor="@color/textHeading"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/questrial"
        android:text="@string/home_subtitle"
        android:textColor="@color/textHeading"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textGreeting" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardMonthlyOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="12sp"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/labelSubtitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/labelMonthlyOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial"
                android:text="@string/monthly_overview"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textGreeting" />

            <TextView
                android:id="@+id/textMonthlyOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:text="Rp. +15.000.000"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textGreeting" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/labelBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/your_budget_control"
        android:textColor="@color/textHeading"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardMonthlyOverview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listBudgetControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_budget_control"
        tools:itemCount="1"
        app:layout_constraintTop_toBottomOf="@id/labelBudget" />

    <TextView
        android:id="@+id/labelTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/weakly_transaction"
        android:textColor="@color/textHeading"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listBudgetControl" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="1"
        tools:listitem="@layout/item_filter"
        app:layout_constraintTop_toBottomOf="@id/labelTransaction" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listTransaction"
        android:layout_width="match_parent"
        tools:itemCount="5"
        tools:listitem="@layout/item_transaction"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/listFilter" />


</androidx.constraintlayout.widget.ConstraintLayout>